# DuplicateFile

./: CMakeLists.txt  README.md
duplicate-File/: CMakeLists.txt
duplicate-File/src/: Directory.h  FileSystem.h  SearchDuplicatFile.h  Verifications.h  class.cpp  functions_app.h  main.cpp
duplicate-File/test/: CreateFileDir.h  SearchDuplicatFileTests.cpp  SearchDuplicatFileTests.h  VerificationsTest.h  VerificationsTests.cpp  mainTest.cpp  tests_app.cpp
src/: main.cpp  myfunctions.h  project
test/: mytests.cpp
